--- a/package.json
+++ b/package.json
@@ -12,20 +12,18 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "7.9.0",
-    "awesome-typescript-loader": "5.2.1",
     "babel-loader": "8.0.6",
-    "css-loader": "3.4.2",
-    "less": "3.11.1",
-    "less-loader": "5.0.0",
-    "mini-css-extract-plugin": "0.9.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "typescript": "3.5.3",
-    "uglifyjs-webpack-plugin": "2.2.0",
-    "url-loader": "4.0.0",
-    "webpack": "4.35.3",
-    "webpack-cli": "3.3.5",
-    "webpack-dev-server": "3.10.3",
-    "file-loader": "6.0.0"
+    "css-loader": "6.7.3",
+    "css-minimizer-webpack-plugin": "5.0.0",
+    "less": "4.1.3",
+    "less-loader": "11.1.0",
+    "mini-css-extract-plugin": "2.7.5",
+    "terser-webpack-plugin": "5.3.8",
+    "ts-loader": "9.4.2",
+    "typescript": "5.0.4",
+    "webpack": "5.82.1",
+    "webpack-cli": "5.1.1",
+    "webpack-dev-server": "4.15.0"
   },
   "dependencies": {
     "echarts": "^4.2.1",
